[package]
name = "ulyn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] } # Cek versi terbaru
axum-server = "0.5" # Or the latest version
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json" ] } # Sesuaikan fitur DB
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] } # Cek versi terbaru
haversine = "0.2" # Atau implementasi manual
haversine-rs = "0.3.0" # Or the latest version you prefer
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower-http = { version = "0.5", features = ["trace", "cors"] } # Cek versi terbaru
argon2 = { version = "0.5", features = ["std"] } # Untuk hashing password
thiserror = "1.0" # Untuk error handling
# polyline = "0.10" # Opsional, jika ingin decode polyline dengan crate
